2006-12-18  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/index.html: print the plugin list
	* browser-plugin/tests/launch-web-server.sh: add some code to log
	the user-agent used
	* browser-plugin/totemNarrowSpacePlugin.cpp: use QuickTime's real
	plug-in name, to avoid detection problems

2006-12-18  Irene Huang  <irene.huang@sun.com>

	* src/bacon-volume.c: (cb_dock_key_release): remove grab of
	the dock button after escape key is released. Fixes bug 385391.

2006-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (size_changed_cb),
	(bacon_video_widget_motion_notify),
	(bacon_video_widget_button_press),
	(bacon_video_widget_button_release),
	(bacon_video_widget_size_allocate),
	(bacon_video_widget_class_init), (bvw_bus_message_cb),
	(parse_stream_info), (bacon_video_widget_set_property),
	(bacon_video_widget_get_property),
	(bacon_video_widget_set_deinterlacing), (bvw_error_from_gst_error),
	(poll_for_state_change_full),
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_set_subtitle_font),
	(bacon_video_widget_set_subtitle_encoding),
	(bacon_video_widget_set_volume),
	(bacon_video_widget_fullscreen_mode_available),
	(bacon_video_widget_set_fullscreen),
	(bacon_video_widget_set_show_cursor), (get_visualization_size),
	(bacon_video_widget_set_show_visuals),
	(bacon_video_widget_set_visuals_quality),
	(bacon_video_widget_set_auto_resize),
	(bacon_video_widget_set_aspect_ratio),
	(bacon_video_widget_set_zoom),
	(bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_current_frame), (cb_gconf),
	(bacon_video_widget_new):
	  Make indentation consistent (tabs => spaces).

2006-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_is_seekable):
	  Use SEEKING query to query seekability instead of second-guessing